python/yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: python
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
